--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "react-redux": "^6.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "2.1.8",
-    "redux": "^4.0.1",
-    "styled-components": "^4.3.2"
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
